@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus/argus-2.0.5.ebuild,v 1.13 2005/09/29 02:35:02 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus/argus-2.0.5.ebuild,v 1.14 2006/02/15 21:41:27 jokey Exp $
 
 inherit eutils
 
@@ -13,7 +13,7 @@ SLOT="0"
 KEYWORDS="~amd64 ~ppc ~ppc-macos x86"
 IUSE=""
 RDEPEND="virtual/libc
-	virtual/libpcap"
+	net-libs/libpcap"
 DEPEND="${RDEPEND}
 	>=sys-devel/bison-1.28
 	>=sys-devel/flex-2.4.6"
