@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/argus-clients
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.3 2006/01/30 19:57:32 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.4 2006/02/15 21:44:59 jokey Exp $
+
+  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> argus-clients-2.0.6.ebuild:
+  Removing virtual/libpcap wrt bug #117898
 
   30 Jan 2006; Simon Stelling <blubb@gentoo.org> argus-clients-2.0.6.ebuild:
   added ~amd64 keyword
